--- a/kadai_022/style.css
+++ b/kadai_022/style.css
@@ -28,9 +28,14 @@ h2{
   border-bottom: 3px dotted rgb(236, 122, 122); 
   before{content:"&#8226; ";}
   }
+  h2::before {
+    content: "●";
+    color:rgb(239, 111, 139);
+    }
   .contents p:nth-of-type(2)::first-letter {
       color: rgb(97, 206, 249);
       font-weight: bold;
+      
   }
   .contents img{
       margin: 10px 0px;
